--- a/notebooks/handling_categorical_variables.ipynb
+++ b/notebooks/handling_categorical_variables.ipynb
@@ -520,9 +520,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'Freezing': 142726, 'Warm': 124239, 'Cold': 97822, 'Boiling Hot': 84790, 'Hot': 67508, 'Lava Hot': 64840, 'NONE': 18075})\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0                 Hot\n",
+       "1                Warm\n",
+       "2            Freezing\n",
+       "3            Lava Hot\n",
+       "4                Cold\n",
+       "             ...     \n",
+       "599995       Freezing\n",
+       "599996    Boiling Hot\n",
+       "599997       Freezing\n",
+       "599998           Warm\n",
+       "599999    Boiling Hot\n",
+       "Name: ord_2, Length: 600000, dtype: object"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Label Encoder using scikit-learn\n",
     "import pandas as pd\n",
@@ -534,7 +563,51 @@
     "# initialize LabelEncoder\n",
     "lbl_enc = preprocessing.LabelEncoder()\n",
     "\n",
-    "df.loc[:, \"ord2_new_le\"] = lbl_enc.fit_transform(df.ord_2.values)"
+    "df.loc[:, \"ord2_new_le\"] = lbl_enc.fit_transform(df.ord_2.values)\n",
+    "print(Counter(df.ord_2))\n",
+    "df.ord_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({2: 142726, 6: 124239, 1: 97822, 0: 84790, 3: 67508, 4: 64840, 5: 18075})\n",
+      "[3 6 2 4 1 0 5]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0         3\n",
+       "1         6\n",
+       "2         2\n",
+       "3         4\n",
+       "4         1\n",
+       "         ..\n",
+       "599995    2\n",
+       "599996    0\n",
+       "599997    2\n",
+       "599998    6\n",
+       "599999    0\n",
+       "Name: ord2_new_le, Length: 600000, dtype: int64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "print(Counter(df.ord2_new_le))\n",
+    "print(df.ord2_new_le.unique())\n",
+    "df.ord2_new_le"
    ]
   },
   {
@@ -649,7 +722,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1244,7 +1319,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
