added feature engineering notebook

--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -755,16 +755,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9. nan nan  2.  8.  9.]\n",
+      " [ 1.  6.  7.  2. 12. 10.]\n",
+      " [ 1. 14.  3.  1. 12.  4.]\n",
+      " [ 3. nan  9.  9.  8. nan]\n",
+      " [14.  1.  6. nan  1. nan]\n",
+      " [ 1. nan 11. 10.  2.  6.]\n",
+      " [ 5.  8.  8.  6.  6.  5.]\n",
+      " [11.  4. 10.  2. 10.  3.]\n",
+      " [ 3.  3. 12.  8. 10. 14.]\n",
+      " [ 4. nan nan  3. nan 12.]]\n",
+      "[[ 9. nan nan  2.  8.  9.]\n",
+      " [ 1.  6.  7.  2. 12. 10.]\n",
+      " [ 1. 14.  3.  1. 12.  4.]\n",
+      " [ 3. nan  9.  9.  8. nan]\n",
+      " [14.  1.  6. nan  1. nan]\n",
+      " [ 1. nan 11. 10.  2.  6.]\n",
+      " [ 5.  8.  8.  6.  6.  5.]\n",
+      " [11.  4. 10.  2. 10.  3.]\n",
+      " [ 3.  3. 12.  8. 10. 14.]\n",
+      " [ 4. nan nan  3. nan 12.]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n",
+      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn import impute\n",
     "\n",
     "X = np.random.randint(1, 15, (10, 6))\n",
     "# convert the array to float\n",
-    "X = X.as"
+    "X = X.astype(float)\n",
+    "\n",
+    "# randomly assign 10 elements to NaN (missing)\n",
+    "X.ravel()[np.random.choice(X.size, 10, replace=False)] = np.nan\n",
+    "print(X)\n",
+    "# use 2 nearest neighbours to fill values\n",
+    "knn_imputer = impute.KNNImputer(n_neighbors=2)\n",
+    "knn_imputer.fit_transform(X)\n",
+    "print(X)"
    ]
   },
   {
