added feature engineering notebook

--- a/notebooks/feature_engineering.ipynb
+++ b/notebooks/feature_engineering.ipynb
@@ -755,57 +755,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 9. nan nan  2.  8.  9.]\n",
-      " [ 1.  6.  7.  2. 12. 10.]\n",
-      " [ 1. 14.  3.  1. 12.  4.]\n",
-      " [ 3. nan  9.  9.  8. nan]\n",
-      " [14.  1.  6. nan  1. nan]\n",
-      " [ 1. nan 11. 10.  2.  6.]\n",
-      " [ 5.  8.  8.  6.  6.  5.]\n",
-      " [11.  4. 10.  2. 10.  3.]\n",
-      " [ 3.  3. 12.  8. 10. 14.]\n",
-      " [ 4. nan nan  3. nan 12.]]\n",
-      "[[ 9. nan nan  2.  8.  9.]\n",
-      " [ 1.  6.  7.  2. 12. 10.]\n",
-      " [ 1. 14.  3.  1. 12.  4.]\n",
-      " [ 3. nan  9.  9.  8. nan]\n",
-      " [14.  1.  6. nan  1. nan]\n",
-      " [ 1. nan 11. 10.  2.  6.]\n",
-      " [ 5.  8.  8.  6.  6.  5.]\n",
-      " [11.  4. 10.  2. 10.  3.]\n",
-      " [ 3.  3. 12.  8. 10. 14.]\n",
-      " [ 4. nan nan  3. nan 12.]]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/Paritosh_Gupta/opt/anaconda3/envs/ml/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
+      "[[13. 10.  6. nan 14.  5.]\n",
+      " [12.  4. 13. nan  4.  8.]\n",
+      " [ 1.  8.  9. nan  2.  3.]\n",
+      " [14.  6. 12. nan  8.  3.]\n",
+      " [ 1. 10. 12.  6. 11.  8.]\n",
+      " [ 5. 11.  4.  9. nan nan]\n",
+      " [nan 12.  9. 11. 11. 14.]\n",
+      " [ 9. nan  2.  9.  1. 13.]\n",
+      " [10. nan  8.  3.  9. 13.]\n",
+      " [nan 12.  9.  3.  7.  9.]]\n",
+      "[[13.  10.   6.   6.  14.   5. ]\n",
+      " [12.   4.  13.   3.   4.   8. ]\n",
+      " [ 1.   8.   9.   6.   2.   3. ]\n",
+      " [14.   6.  12.   3.   8.   3. ]\n",
+      " [ 1.  10.  12.   6.  11.   8. ]\n",
+      " [ 5.  11.   4.   9.   6.  13.5]\n",
+      " [ 3.  12.   9.  11.  11.  14. ]\n",
+      " [ 9.  11.5  2.   9.   1.  13. ]\n",
+      " [10.  12.   8.   3.   9.  13. ]\n",
+      " [ 5.5 12.   9.   3.   7.   9. ]]\n"
      ]
     }
    ],
@@ -822,8 +798,17 @@
     "print(X)\n",
     "# use 2 nearest neighbours to fill values\n",
     "knn_imputer = impute.KNNImputer(n_neighbors=2)\n",
-    "knn_imputer.fit_transform(X)\n",
-    "print(X)"
+    "X_new = knn_imputer.fit_transform(X)\n",
+    "print(X_new)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Robust model based imputaton\n",
+    "\n",
+    "    - Train a Regression model that tries to predict missing values in a column based on other columns\n"
    ]
   },
   {
