--- a/notebooks/intro_image_problems.ipynb
+++ b/notebooks/intro_image_problems.ipynb
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Size of images array --> (2135, 65536)\n"
+      "Size of images array --> (2135, 65536)\n",
+      " Fold - 4, AUC = 0.7232969137021897\n"
      ]
     }
    ],
@@ -551,12 +552,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7272588306208558"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.768 + 0.7243036455088364 + 0.7054562331261618 + 0.7152373607670915 + 0.7232969137021897)/5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "(0.768 + 0.7243036455088364 + 0.7054562331261618 + 0.7152373607670915 + )/5"
-   ]
+   "source": []
   }
  ],
  "metadata": {
