added xgb osic baseline model

--- a/notebooks/osic_baseline_tabular_only.ipynb
+++ b/notebooks/osic_baseline_tabular_only.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "4  ID00007637202177411956430_11  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,13 +295,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e09994834908425f863a1a0090d53ea8",
+       "model_id": "083a7cc557134d77a3c733b950950bdb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -452,7 +452,7 @@
        "4  Male     Ex-smoker           15  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "4  Male     Ex-smoker           21  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "4          -14  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
        "4  ID00426637202313170790466_-12  2000         100"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
        "4  Male     Ex-smoker           21     2  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,15 +1134,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:44<00:00,  1.12trial/s, best loss: 254.7971011671423] \n",
-      "{'colsample_bytree': 0.8500000000000001, 'eta': 0.225, 'gamma': 0.5, 'max_depth': 0, 'min_child_weight': 6.0, 'subsample': 0.55}\n"
+      "100%|██████████| 50/50 [00:37<00:00,  1.34trial/s, best loss: 269.4169314361831] \n",
+      "{'colsample_bytree': 1.0, 'eta': 0.07500000000000001, 'gamma': 0.6000000000000001, 'min_child_weight': 1.0, 'subsample': 0.65}\n"
      ]
     }
    ],
@@ -1162,7 +1162,6 @@
     "\n",
     "param_space = {\n",
     "        'eta': hp.quniform('eta', 0.025, 0.5, 0.025),\n",
-    "        'max_depth':  hp.choice('max_depth', np.arange(1, 14, dtype=int)),\n",
     "        'min_child_weight': hp.quniform('min_child_weight', 1, 6, 1),\n",
     "        'subsample': hp.quniform('subsample', 0.5, 1, 0.05),\n",
     "        'gamma': hp.quniform('gamma', 0.5, 1, 0.05),\n",
@@ -1190,13 +1189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_params = {'colsample_bytree': 1.0, \n",
-    "               'eta': 0.1, 'gamma': 0.75, \n",
-    "               'max_depth': 1, 'min_child_weight': 5.0, 'subsample': 0.65,\n",
+    "best_params = {'colsample_bytree': 1.0, 'eta': 0.07500000000000001, \n",
+    "               'gamma': 0.6000000000000001, \n",
+    "               'min_child_weight': 1.0,\n",
+    "               'subsample': 0.65\n",
     "               'objective': 'reg:squarederror',\n",
     "        'eval_metric': 'rmse'\n",
     "              }\n",
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1222,7 @@
        "             validate_parameters=1, verbosity=None)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1276,13 +1276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92d24a43accc4bd3a9651e733ddf5e89",
+       "model_id": "9177180ec1704797b0c4cbc10da33424",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
        "4     212.272056  150.105957  150.105957 -6.704489  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,35 +1562,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['base_FVC', 'base_Percent', 'base_Age', 'Week_passed', 'Sex', 'SmokingStatus']"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [00:45<00:00,  1.09trial/s, best loss: 212.98512869412372]\n",
-      "{'colsample_bytree': 0.8, 'eta': 0.05, 'gamma': 0.8500000000000001, 'max_depth': 0, 'min_child_weight': 4.0, 'subsample': 0.8}\n"
+      "100%|██████████| 50/50 [00:44<00:00,  1.14trial/s, best loss: 213.80014301705927]\n",
+      "{'colsample_bytree': 0.6000000000000001, 'eta': 0.025, 'gamma': 0.9500000000000001, 'min_child_weight': 5.0, 'subsample': 0.7000000000000001}\n"
      ]
     }
    ],
@@ -1614,34 +1594,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
-       "             colsample_bynode=1, colsample_bytree=0.8, eta=0.05,\n",
-       "             eval_metric='rmse', gamma=0.8500000000000001, gpu_id=-1,\n",
+       "             colsample_bynode=1, colsample_bytree=0.6000000000000001, eta=0.025,\n",
+       "             eval_metric='rmse', gamma=0.9500000000000001, gpu_id=-1,\n",
        "             importance_type='gain', interaction_constraints='',\n",
-       "             learning_rate=0.0500000007, max_delta_step=0, max_depth=0,\n",
-       "             min_child_weight=4.0, missing=nan, monotone_constraints='()',\n",
+       "             learning_rate=0.0250000004, max_delta_step=0, max_depth=6,\n",
+       "             min_child_weight=5.0, missing=nan, monotone_constraints='()',\n",
        "             n_estimators=100, n_jobs=0, num_parallel_tree=1, random_state=0,\n",
-       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, subsample=0.8,\n",
-       "             tree_method='exact', validate_parameters=1, verbosity=None)"
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1,\n",
+       "             subsample=0.7000000000000001, tree_method='exact',\n",
+       "             validate_parameters=1, verbosity=None)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "best_params = {'colsample_bytree': 0.8, 'eta': 0.05, \n",
-    "               'gamma': 0.8500000000000001,\n",
-    "               'max_depth': 0,\n",
-    "               'min_child_weight': 4.0,\n",
-    "               'subsample': 0.8,\n",
+    "best_params = {'colsample_bytree': 0.6000000000000001, \n",
+    "               'eta': 0.025, 'gamma': 0.9500000000000001, \n",
+    "               'min_child_weight': 5.0, \n",
+    "               'subsample': 0.7000000000000001,\n",
     "               'objective': 'reg:squarederror',\n",
     "        'eval_metric': 'rmse'\n",
     "              }\n",
@@ -1651,14 +1631,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-6.7490452706400115\n"
+      "-6.66109776253406\n"
      ]
     }
    ],
@@ -1674,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1690,15 +1670,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Local Score: -6.7490452706400115\n",
-      "Local Score: -6.7490452706400115\n"
+      "Local Score: -6.66109776253406\n"
      ]
     }
    ],
@@ -1709,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1718,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1791,7 +1770,7 @@
        "4  ID00426637202313170790466_-12  2000         100"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1802,9 +1781,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Patient_Week</th>\n",
+       "      <th>FVC</th>\n",
+       "      <th>Confidence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ID00419637202311204720264_-12</td>\n",
+       "      <td>3027.633057</td>\n",
+       "      <td>190.816620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ID00421637202311550012437_-12</td>\n",
+       "      <td>2864.305420</td>\n",
+       "      <td>179.926117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ID00422637202311677017371_-12</td>\n",
+       "      <td>1981.816406</td>\n",
+       "      <td>168.484070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ID00423637202312137826377_-12</td>\n",
+       "      <td>3269.604004</td>\n",
+       "      <td>220.305710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ID00426637202313170790466_-12</td>\n",
+       "      <td>3010.431885</td>\n",
+       "      <td>168.131561</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Patient_Week          FVC  Confidence\n",
+       "0  ID00419637202311204720264_-12  3027.633057  190.816620\n",
+       "1  ID00421637202311550012437_-12  2864.305420  179.926117\n",
+       "2  ID00422637202311677017371_-12  1981.816406  168.484070\n",
+       "3  ID00423637202312137826377_-12  3269.604004  220.305710\n",
+       "4  ID00426637202313170790466_-12  3010.431885  168.131561"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sub = submission.drop(columns=['FVC', 'Confidence']).merge(test[['Patient_Week', 'FVC_pred', 'Confidence']], \n",
     "                                                           on='Patient_Week')\n",
@@ -1815,20 +1869,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([222.7575], dtype=float32)"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
